added favicon, logos and metatags

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="robots" content="index, follow">
+
+  <!-- Primary Meta Tags -->
   <title>Flood</title>
+  <meta name="title" content="<Flood />">
+  <meta name="description" content="<Flood />">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://flood.ar/">
+  <meta property="og:title" content="<Flood />">
+  <meta property="og:description" content="See more">
+  <meta property="og:image" content="/preview.jpg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://flood.ar/">
+  <meta property="twitter:title" content="<Flood />">
+  <meta property="twitter:description" content="See more">
+  <meta property="twitter:image" content="/preview.jpg">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
